section__soon card__image fix on mobile

--- a/style.css
+++ b/style.css
@@ -1008,6 +1008,8 @@ section {
 
         .card__image {
           height: 100%;
+          max-width: 100%;
+          width: auto;
         }
       }
     }
